# new_toolchain

./: .gitignore  BUILD.bazel  Jj.txt  WORKSPACE.bazel  bazel-bin  bazel-new-toolchain  bazel-out  bazel-testlogs  cmakelist_sample.cmake.in  lethalCheckFile.cmake  load.bzl  make.json  module_sample.cmake.in  newFile.cmake  newfile.cmake  newtlcmake.cmake  readme.md  toolchain.code-workspace  tsconfig.json~
fs/: paths.cmake  paths.js
icmods/: downl.js  external.js  icmods.js  package-lock.json  package.json
lib_sources/: internet.bzl  local.bzl
local/: local.cmake
mod/: CMakeListSample.cmake.in  CMakeListSample.cmake.in~  addIncludes.cmake  addMain.cmake  addMainFunction.cmake  build.config.in  buildMod.cmake  buildToolchainMod.cmake  cmakelist_sample.cmake.in  doubleConfigureFile.cmake  findSample.cmake.in  module_sample.cmake.in  sampleConfig.cmake.in  sampleConfigVersion.cmake.in
mod/function/: CustomCmakeCommand.cmake  addAssetsFunction.cmake  addBuildConfigFunction.cmake  addIncludesFunction.cmake  addMainFunction.cmake
mod/modFiles/: AddAssets.cmake  addBuildConfig.cmake  addIncludes.cmake  addIncludes.cmake~  addMain.cmake  append.cmake  build.config.in  lines.cmake  split.cmake
native/: InnerCore.toolchain  inner_cmake.bzl
script/: CMakeDetermineTSCompiler.cmake  CMakeTSCompiler.cmake  CMakeTSCompiler.cmake.in  CMakeTSInformation.cmake  CMakeTestTSCompiler.cmake  UseTS.cmake  tsconfig.json.in
src/: BUILD
src/dev/: .includes  api.ts  eslint.json  tsconfig.json~
src/dev/core/agriculture/CropCard/: cards.ts
src/dev/core/machine/: gradientMesh.ts  gradientMesh.ts~  gradientTile.ts  gradientTile.ts~
src/dev/core/machine/gradient/: gradientMesh.ts  gradientRegister.ts  gradientTile.ts
src/dev/items/resource/: gradient.ts  gradient.ts~  gradientTile.ts~  shaft.ts
src/dev/machine/: IHeatConsumer.ts  IMomentOfMomentumConsumer.ts  IWrenchable.ts
src/dev/machine/generator/: FuelGenerator.ts  KineticGenerator.ts  KineticGenerator.ts~
src/dev/machine/heat_generator/: ElectricHeatGenerator.ts
src/dev/machine/rotational_generator/: ElectricKineticGenerator.ts  ElectricKineticGenerator.ts~  ManualKineticGenerator.ts  ManualKineticGenerator.ts~  WindKineticGenerator.ts  WindKineticGenerator.ts~
toolchain/: WORKSPACE.bazel  df.bazel  toolchain.json  toolchain.json~
toolchain/toolchain/: archive.bzl  byID.bzl  byName.bzl  deps.bzl  git.bzl  local.bzl  toolchain.bzl
toolchain/toolchain/declarations/: adapted-script.d.ts
toolchain/toolchain/icmods/: downl.js  icmods.js  package-lock.json  package.json
toolchain/toolchain/js/: inner_js.bzl
toolchain/toolchain/lib_sources/: archive.bzl  byID.bzl  byName.bzl  external.bzl  git.bzl  icmods.bzl  internet.bzl  local.bzl  mod_archive.bzl_not
toolchain/toolchain/native/: inner_cc_import.bzl  inner_cc_library.bzl
toolchain/toolchain/python/: #err#  err
toolchain/toolchain/python/innercoremodtoolchain/: #task.py#  includes.py  includes.py~  workspace.py  workspace.py~
tools/function/: CustomCmakeCommand.cmake  return.cmake
