workspace(name = "Inner_Core_mod")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository(
    name = "toolchain",
    path = "toolchain",
)

register_toolchains(
    "//inner_toolchain:inner_toolchain",
    #path = "toolchain",
)

#platform(
    #name = "inner_platform",
    #constraint_values = [
        #"@platforms//os:android",
    #],
#)

load("@toolchain//toolchain:load.bzl", "inner_dependencies")

inner_dependencies()

load("@toolchain//toolchain:deps.bzl", "inner_post_dependencies")

inner_post_dependencies()

#load("inner//:df.bzl", "inner_mod_byName") #etc

#inner_mod_byName (
    #name = "IndustrialCraft PE​", #or byID id = 22
    #build_file = "@//:third_party/industrial_craft2/BUILD.bazel",
    #strip_prefix = "src",
#)

#inner_git_repository (
    #name = "super_ore_lib",
    #build_file = "@//:third_party/super_ore_lib/BUILD.bazel",
    #strip_prefix = "src",
    #urls = [
        #"https://github.com/modder/super_ore_lib/archive/0.tar.gz",
    #],
#)

#inner_local_repository (
    #name = "ore_mobs",
    #build_file = "@//:third_party/ore_mobs/BUILD.bazel",
    #strip_prefix = "src",
    #path = "https://github.com/modder/ore_mobs/archive/",
#)